k8s/apps/dev/web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: dainmusty/phone-store:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
